other/enforce-resources-as-ratio/.chainsaw-test/podcontrollers-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox02
        resources:
          requests:
            memory: "100Mi"
          limits:
            memory: "300Mi"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: busybox
        spec:
          containers:
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox02
            resources:
              requests:
                memory: "100Mi"
              limits:
                memory: "1000Mi"
          restartPolicy: OnFailure
