other/enforce-resources-as-ratio/.chainsaw-test/podcontrollers-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox02
        resources:
          requests:
            memory: "100Mi"
          limits:
            memory: "200Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        resources:
          requests:
            memory: "100Mi"
          limits:
            memory: "250Mi"
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox02
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: busybox
        spec:
          containers:
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox02
            resources:
              requests:
                memory: "100Mi"
              limits:
                memory: "200Mi"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: busybox
        spec:
          containers:
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox
            resources:
              requests:
                memory: "100Mi"
              limits:
                memory: "250Mi"
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox02
          restartPolicy: OnFailure
