other/enforce-resources-as-ratio/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      resources:
        requests:
          memory: "100Mi"
        limits:
          memory: "1000Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        requests:
          memory: "100Mi"
        limits:
          memory: "300Mi"
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
